refactor(ratatui api): set up ratatui project using cargo generate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,12 @@
 [package]
 name = "vomit"
 version = "0.1.0"
+description = "Some AI slop for trying ratatui"
+authors = ["Devansh Srivastava <devansh.srv@gmail.com>"]
+license = "MIT"
 edition = "2024"
 
 [dependencies]
+crossterm = "0.28.1"
+ratatui = "0.29.0"
+color-eyre = "0.6.3"
