Update copyright year and owner in LICENSE file

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -66,14 +66,14 @@ jobs:
     - name: build package
       run:  make build
 
-    - name: Publish
-      if:   github.event_name == 'push' && github.ref == 'refs/heads/master' && github.repository_owner == 'eunomia-bpf'
-      uses: softprops/action-gh-release@v1
-      with:
-          files: |
-            target/release/runqslower
-          prerelease: false
-          tag_name: ${{ steps.set_version.outputs.result }}
-          generate_release_notes: true
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    # - name: Publish
+    #   if:   github.event_name == 'push' && github.ref == 'refs/heads/master' && github.repository_owner == 'devansh-srv'
+    #   uses: softprops/action-gh-release@v1
+    #   with:
+    #       files: |
+    #         target/release/vomit
+    #       prerelease: false
+    #       tag_name: ${{ steps.set_version.outputs.result }}
+    #       generate_release_notes: true
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
